--- a/plist/mobileminer.plist
+++ b/plist/mobileminer.plist
@@ -8,7 +8,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string><a xmlns="http://www.w3.org/1999/xhtml" href="http://pro-apps.tk/ipa/mobileminer.ipa" dir="ltr" x-apple-data-detectors="true" x-apple-data-detectors-type="link" x-apple-data-detectors-result="0">http://pro-apps.tk/ipa/mobileminer.ipa/a></string>
+					<string><a xmlns="http://www.w3.org/1999/xhtml" href="https://www.pro-apps.tk/plist/ipa/mobileminer.ipa" dir="ltr" x-apple-data-detectors="true" x-apple-data-detectors-type="link" x-apple-data-detectors-result="0">https://www.pro-apps.tk/plist/ipa/mobileminer.ipa></string>
 				</dict>
 				<dict>
 					<key>kind</key>
